Fixed alignment of floats

--- a/src/cameraWebsite/src/css/styles.css
+++ b/src/cameraWebsite/src/css/styles.css
@@ -108,7 +108,7 @@ table.table table.table {
 .select-list a.active { font-weight: bold; }
 
 /* Float right images */
-.rightimg { float:right;margin:12px;padding:8px;border:1px solid #888;text-align: center; width:300px; box-sizing: content-box; }
+.rightimg { clear:both;float:right;margin:12px;padding:8px;border:1px solid #888;text-align: center; width:300px; box-sizing: content-box; }
 .rightimg img { width: 300px; }
 
 /* Tweak navbar colours and spacing */
